--- a/src/assets/sass/website/components/contact/contact-form.scss
+++ b/src/assets/sass/website/components/contact/contact-form.scss
@@ -1,6 +1,7 @@
 @import "../../mixins.scss";
 @import "../../color-palette.scss";
 @import "../../variables.scss";
+@import "../../shared/half-clipped-shape.scss";
 
 .contact-form-wrapper {
   form {
@@ -20,7 +21,7 @@
       padding: 30px;
     }
     @include is-extra-large-desktop {
-      padding: 30px 50px;
+      padding: 50px;
     }
     .form-group {
       position: relative;
@@ -45,66 +46,44 @@
   }
   &__input-outline-mask,
   &__input-outline-mask input {
-    @include is-extra-small-mobile {
-      $clipped-shape-width: 50%;
-      $clipped-shape-height: 7%;
-      $clipped-length: 3%;
-      @include half-clipped-shape(
-        $clipped-shape-width,
-        $clipped-shape-height,
-        $clipped-length
-      );
-    }
-    @include is-mobile {
-      $clipped-shape-width: 90%;
-      $clipped-shape-height: 7%;
-      $clipped-length: 3%;
-      @include half-clipped-shape(
-        $clipped-shape-width,
-        $clipped-shape-height,
-        $clipped-length
-      );
-    }
-    @include is-tablet {
-      $clipped-shape-width: 60%;
-      $clipped-shape-height: 7%;
-      $clipped-length: 3%;
-      @include half-clipped-shape(
-        $clipped-shape-width,
-        $clipped-shape-height,
-        $clipped-length
-      );
-    }
-    @include is-desktop {
-      $clipped-shape-width: 80%;
-      $clipped-shape-height: 7%;
-      $clipped-length: 3%;
-      @include half-clipped-shape(
-        $clipped-shape-width,
-        $clipped-shape-height,
-        $clipped-length
-      );
-    }
-    @include is-large-desktop {
-      $clipped-shape-width: 90%;
-      $clipped-shape-height: 8%;
-      $clipped-length: 3%;
-      @include half-clipped-shape(
-        $clipped-shape-width,
-        $clipped-shape-height,
-        $clipped-length
-      );
-    }
-    @include is-extra-large-desktop {
-      $clipped-shape-width: 100%;
-      $clipped-shape-height: 7%;
-      $clipped-length: 2%;
-      @include half-clipped-shape(
-        $clipped-shape-width,
-        $clipped-shape-height,
-        $clipped-length
-      );
-    }
+    $extra-small-mobile: (
+      clipped-shape-width: 50%,
+      clipped-shape-height: 7%,
+      clipped-length: 3%
+    );
+    $mobile: (
+      clipped-shape-width: 90%,
+      clipped-shape-height: 7%,
+      clipped-length: 3%
+    );
+    $tablet: (
+      clipped-shape-width: 60%,
+      clipped-shape-height: 7%,
+      clipped-length: 3%
+    );
+    $desktop: (
+      clipped-shape-width: 80%,
+      clipped-shape-height: 7%,
+      clipped-length: 3%
+    );
+    $large-desktop: (
+      clipped-shape-width: 90%,
+      clipped-shape-height: 8%,
+      clipped-length: 3%
+    );
+    $extra-large-desktop: (
+      clipped-shape-width: 100%,
+      clipped-shape-height: 7%,
+      clipped-length: 2%
+    );
+    @include set-half-clipped-shape-for-input(
+      $extra-small-mobile,
+      $mobile,
+      $tablet,
+      $desktop,
+      $large-desktop,
+      $extra-large-desktop
+    );
   }
   &__input-outline-mask {
     position: relative;
@@ -146,65 +125,83 @@
   }
   &__textarea-outline-mask,
   &__textarea-outline-mask textarea {
-    @include is-extra-small-mobile {
-      $clipped-shape-width: 50%;
-      $clipped-shape-height: 25%;
-      $clipped-length: 3%;
-      @include half-clipped-shape(
-        $clipped-shape-width,
-        $clipped-shape-height,
-        $clipped-length
-      );
-    }
-    @include is-mobile {
-      $clipped-shape-width: 70%;
-      $clipped-shape-height: 20%;
-      $clipped-length: 2.5%;
-      @include half-clipped-shape(
-        $clipped-shape-width,
-        $clipped-shape-height,
-        $clipped-length
-      );
-    }
-    @include is-tablet {
-      $clipped-shape-width: 70%;
-      $clipped-shape-height: 30%;
-      $clipped-length: 4%;
-      @include half-clipped-shape(
-        $clipped-shape-width,
-        $clipped-shape-height,
-        $clipped-length
-      );
-    }
-    @include is-desktop {
-      $clipped-shape-width: 80%;
-      $clipped-shape-height: 25%;
-      $clipped-length: 3%;
-      @include half-clipped-shape(
-        $clipped-shape-width,
-        $clipped-shape-height,
-        $clipped-length
-      );
-    }
-    @include is-large-desktop {
-      $clipped-shape-width: 90%;
-      $clipped-shape-height: 25%;
-      $clipped-length: 3%;
-      @include half-clipped-shape(
-        $clipped-shape-width,
-        $clipped-shape-height,
-        $clipped-length
-      );
-    }
-    @include is-extra-large-desktop {
-      $clipped-shape-width: 100%;
-      $clipped-shape-height: 20%;
-      $clipped-length: 2%;
-      @include half-clipped-shape(
-        $clipped-shape-width,
-        $clipped-shape-height,
-        $clipped-length
-      );
-    }
+    $extra-small-mobile: (
+      clipped-shape-width: 50%,
+      clipped-shape-height: 25%,
+      clipped-length: 3%
+    );
+    $mobile: (
+      clipped-shape-width: 70%,
+      clipped-shape-height: 20%,
+      clipped-length: 2.5%
+    );
+    $tablet: (
+      clipped-shape-width: 70%,
+      clipped-shape-height: 30%,
+      clipped-length: 4%
+    );
+    $desktop: (
+      clipped-shape-width: 80%,
+      clipped-shape-height: 25%,
+      clipped-length: 3%
+    );
+    $large-desktop: (
+      clipped-shape-width: 90%,
+      clipped-shape-height: 25%,
+      clipped-length: 3%
+    );
+    $extra-large-desktop: (
+      clipped-shape-width: 100%,
+      clipped-shape-height: 20%,
+      clipped-length: 2%
+    );
+    @include set-half-clipped-shape-for-input(
+      $extra-small-mobile,
+      $mobile,
+      $tablet,
+      $desktop,
+      $large-desktop,
+      $extra-large-desktop
+    );
   }
+}
+
+// All have vw as divide operation units must be the same for all
+$width: 50vw;
+$height: 25vw;
+$clipped-length: 4vw;
+
+$widths-and-heights: (
+  clipped-shape-width: $width,
+  clipped-shape-height: $height,
+  clipped-length: $clipped-length,
+  clipped-shape-width-xs: 70vw,
+  clipped-shape-height-xs: (
+    $height + 10vw
+  ) * 3,
+  clipped-length-xs: $clipped-length,
+  clipped-shape-width-sm: (
+    $width + 5vw
+  ) * 1.5,
+  clipped-shape-height-sm: (
+    $height + 5vw
+  ) * 2,
+  clipped-length-sm: $clipped-length,
+  clipped-shape-width-md: $width + 5vw,
+  clipped-shape-height-md: $height * 2,
+  clipped-length-md: $clipped-length,
+  clipped-shape-width-lg: $width + 5vw,
+  clipped-shape-height-lg: $height + 12vw,
+  clipped-length-lg: $clipped-length,
+  clipped-shape-width-xlg: $width + 5vw,
+  clipped-shape-height-xlg: $height + 10vw,
+  clipped-length-xlg: $clipped-length,
+  clipped-shape-width-xxlg: $width - 10vw,
+  clipped-shape-height-xxlg: $height + 1vw,
+  clipped-length-xxlg: $clipped-length
+);
+
+// use /deep/ to apply scss classes to the child components
+div /deep/ {
+  @include filled-half-clipped-shape($widths-and-heights, $form-background);
 }
