--- a/src/assets/sass/website/fonts.scss
+++ b/src/assets/sass/website/fonts.scss
@@ -1,24 +1,4 @@
 @font-face {
-  font-family: "Roboto";
-  src: url("../../fonts/website/Roboto-Regular.ttf");
-}
-
-@font-face {
-  font-family: "Roboto Bold";
-  src: url("../../fonts/website/Roboto-Bold.ttf");
-}
-
-@font-face {
-  font-family: "Roboto Light";
-  src: url("../../fonts/website/Roboto-Light.ttf");
-}
-
-@font-face {
-  font-family: "Roboto Medium";
-  src: url("../../fonts/website/Roboto-Medium.ttf");
-}
-
-@font-face {
-  font-family: "Roboto Thin";
-  src: url("../../fonts/website/Roboto-Thin.ttf");
+  font-family: "Segoe-UI";
+  src: url("../../fonts/website/Segoe-UI.ttf");
 }
