--- a/src/assets/sass/website/shared/header.scss
+++ b/src/assets/sass/website/shared/header.scss
@@ -8,7 +8,37 @@
     width: 100%;
     background-color: $primary;
     padding: 8px;
+    padding-left: 40px;
     display: flex;
+    @include is-desktop{
+      padding-left: 20px;
+    }
+    @include is-tablet{
+      padding-left: 10px;
+    }
+    @include is-mobile{
+      padding-left: 10px;
+    }
+    &__logos{
+      margin-left: auto;
+      padding-right: 50px;
+      @include is-desktop{
+        padding-right: 20px;
+      }
+      @include is-tablet{
+        padding-right: 10px;
+      }
+      @include is-mobile{
+        padding-right: 10px;
+      }
+      .fb-logo{
+        width: 12px;
+      }
+      img{
+        margin: 10px 18px 10px 18px;
+        width: 20px;
+      }
+    }
   }
   &__main {
     position: sticky;
@@ -205,3 +235,5 @@
     right: 35px;
   }
 }
+
+
