--- a/src/assets/sass/website/containers/about.scss
+++ b/src/assets/sass/website/containers/about.scss
@@ -50,6 +50,9 @@
             font-size: 2.5rem;
             font-family: Segoe UI !important;
             font-weight: bolder;
+            @media (max-width:1650px) {
+              font-size: 2rem;
+            }
             @include is-mobile {
                 font-size: 1.5rem;
               }
@@ -60,6 +63,10 @@
             user-select: none;
             font-size: 1.1rem;
             line-height: 40px;
+            @media (max-width:1650px) {
+              font-size: 1rem;
+              line-height: 30px;
+            }
             @include is-mobile {
                 font-size: 1rem;
               }
@@ -80,24 +87,24 @@ $widths-and-heights: (
   clipped-length: $clipped-length,
   clipped-shape-width-xs: 90vw,
   clipped-shape-height-xs: (
-    $height + 10vw
+    $height + 15vw
   ) * 3,
   clipped-length-xs: $clipped-length,
   clipped-shape-width-sm: (
     $width + 10vw
   ) * 1.5,
   clipped-shape-height-sm: (
-    $height + 15vw
+    $height + 9vw
   ) * 2,
   clipped-length-sm: $clipped-length,
   clipped-shape-width-md: $width + 17vw,
-  clipped-shape-height-md: $height * 2 + 10,
+  clipped-shape-height-md: $height * 2 + 3,
   clipped-length-md: $clipped-length,
   clipped-shape-width-lg: $width + 15vw,
-  clipped-shape-height-lg: $height + 22vw,
+  clipped-shape-height-lg: $height + 15vw,
   clipped-length-lg: $clipped-length,
   clipped-shape-width-xlg: $width + 10vw,
-  clipped-shape-height-xlg: $height + 14vw,
+  clipped-shape-height-xlg: $height + 10vw,
   clipped-length-xlg: $clipped-length,
   clipped-shape-width-xxlg: $width - 10vw,
   clipped-shape-height-xxlg: $height + 3vw,
