fixed PR issues

--- a/src/assets/sass/website/components/about/about-clients.scss
+++ b/src/assets/sass/website/components/about/about-clients.scss
@@ -2,19 +2,20 @@
 @import "../../variables.scss";
 @import "../../mixins.scss";
 
-.aboutclients-wrapper{
+.about-clients-wrapper{
     &__inside{
       padding-bottom: 150px;
-      .clients-header{
-        width: 100%;
-        text-align: center;
-        color: $header-item;
-        margin: 100px 0 150px 0;
-        h1{
-          font-family: Segoe UI !important;
-          font-weight: bolder;
-        }
+
+    .clients-header{
+      width: 100%;
+      text-align: center;
+      color: $header-item;
+      margin: 100px 0 150px 0;
+      h1{
+        font-family: "Segoe UI";
+        font-weight: bolder;
       }
+    }
       &__topline, &__bottomline{
         display: flex;
         justify-content: center;
@@ -87,40 +88,40 @@
               display: none;
             }
 
-            &__image{
-              object-fit: contain;
-              padding: 30px;
-              width: 65%;
-              margin-right: auto;
-              @include is-large-desktop {
-                width: 70%;
-              }
-              @include is-desktop {
-                width: 80%;
-              }
-              @include is-tablet {
-                width: 90%;
-              }
-              @include is-mobile {
-                width: 100%;
-              }
-            }
-            .bottomgrid{
-              margin-top: 0;
-              margin-bottom: -50px;
-            }
-            &__rightline, &__leftline{
-              width: .01rem;
-              background-color: rgba(151, 143, 143, 0.2);
-              margin-top: -50px;
-            }
-            &__rightline{
-              margin-left: auto;
-            }
-            &__leftline{
-              margin-right: auto;
-            }
+        &__image{
+          object-fit: contain;
+          padding: 30px;
+          width: 65%;
+          margin-right: auto;
+          @include is-large-desktop {
+            width: 70%;
           }
+          @include is-desktop {
+            width: 80%;
+          }
+          @include is-tablet {
+            width: 90%;
+          }
+          @include is-mobile {
+            width: 100%;
+          }
+        }
+        .bottomgrid{
+          margin-top: 0;
+          margin-bottom: -50px;
+        }
+        &__rightline, &__leftline{
+          width: .01rem;
+          background-color: rgba(151, 143, 143, 0.2);
+          margin-top: -50px;
+        }
+        &__rightline{
+          margin-left: auto;
+        }
+        &__leftline{
+          margin-right: auto;
+        }
+      }
       }
   }
 }
