--- a/src/assets/sass/website/app.scss
+++ b/src/assets/sass/website/app.scss
@@ -11,7 +11,7 @@ body {
 
 .app-wrapper {
   height: 100%;
-  font-family: Segoe UI;
+  font-family: "Segoe UI";
   overflow-y: auto;
   overflow-x: hidden;
   &::-webkit-scrollbar {
