--- a/src/assets/sass/website/components/about/about-section.scss
+++ b/src/assets/sass/website/components/about/about-section.scss
@@ -2,8 +2,8 @@
 @import "../../variables.scss";
 @import "../../mixins.scss";
 
-.aboutsection-wrapper{
-    font-family: Segoe UI !important;
+.about-section-wrapper{
+
     &__container{
         width: 100%;
         display: flex;
@@ -23,7 +23,7 @@
             h1{
                 color: $header-item;
                 font-size: 2.3rem;
-                font-family: Segoe UI !important;
+                font-family: "Segoe UI";
                 font-weight: bolder;
                 @include is-large-desktop {
                     font-size: 1.7rem;
@@ -35,7 +35,7 @@
             p{
                 color: $sub-text;
                 font-size: 1.2rem;
-                font-family: Segoe UI !important;
+                font-family: "Segoe UI";
                 @include is-large-desktop {
                   font-size: 1rem;
                 }
