--- a/src/assets/sass/website/containers/about.scss
+++ b/src/assets/sass/website/containers/about.scss
@@ -3,6 +3,12 @@
 @import "../mixins.scss";
 @import "../shared/half-clipped-shape.scss";
 
+@mixin max-width-1650 {
+  @media (max-width: 1650px) {
+    @content;
+  }
+}
+
 .about-wrapper {
   background-color: $primary;
   height: max-content;
@@ -12,30 +18,30 @@
     margin-top: -$header-height-mobile - 45;
     min-height: calc(100vh - #{$footer-height-mobile});
   }
-  @media (max-width:600px) {
+  @include is-extra-small-mobile{
     margin-top: -75px;
   }
   .hero-wrapper{
-    @media (max-width:600px) {
+    @include is-extra-small-mobile{
       padding-top: 150px;
     }
   }
   .about-container{
     .half-filled-box{
-      margin: 0!important;
-      margin-bottom: 100px!important;
+      margin: 0;
+      margin-bottom: 100px;
       @include is-large-desktop {
-        margin-bottom: 90px!important;
+        margin-bottom: 90px;
       }
       @include is-desktop {
-        margin-bottom: 80px!important;
+        margin-bottom: 80px;
       }
       @include is-tablet {
-        margin-bottom: 70px!important;
+        margin-bottom: 70px;
       }
       @include is-mobile {
-        margin-bottom: 50px!important;
-        margin-top: 100px!important;
+        margin-bottom: 50px;
+        margin-top: 100px;
       }
     }
     &__heroContent{
@@ -48,9 +54,9 @@
             color: $header-item;
             user-select: none;
             font-size: 2.5rem;
-            font-family: Segoe UI !important;
+            font-family: "Segoe UI";
             font-weight: bolder;
-            @media (max-width:1650px) {
+            @include max-width-1650{
               font-size: 2rem;
             }
             @include is-mobile {
@@ -58,18 +64,18 @@
               }
         }
         p{
-            color: $sub-text!important;
-            font-family: Segoe UI !important;
+            color: $sub-text;
+            font-family: "Segoe UI";
             user-select: none;
             font-size: 1.1rem;
             line-height: 40px;
-            @media (max-width:1650px) {
+            @include max-width-1650{
               font-size: 1rem;
               line-height: 30px;
             }
             @include is-mobile {
-                font-size: 1rem;
-              }
+              font-size: 1rem;
+            }
         }
     }
   }
