--- a/src/assets/sass/lbd/_typography.scss
+++ b/src/assets/sass/lbd/_typography.scss
@@ -23,7 +23,7 @@ td,
 button.close {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: "Roboto", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Segoe UI";
   font-weight: $font-weight-normal;
 }
 
@@ -37,43 +37,43 @@ h4,
 .h4 {
   font-weight: $font-weight-light;
   margin: $margin-large-vertical 0 $margin-base-vertical;
-  font-family: "Roboto";
+  font-family: "Segoe UI";
 }
 
 h1,
 .h1 {
   font-size: $font-size-h1;
-  font-family: "Roboto";
+  font-family: "Segoe UI";
 }
 h2,
 .h2 {
   font-size: $font-size-h2;
-  font-family: "Roboto";
+  font-family: "Segoe UI";
 }
 h3,
 .h3 {
   font-size: $font-size-h3;
   margin: 20px 0 10px;
-  font-family: "Roboto";
+  font-family: "Segoe UI";
 }
 h4,
 .h4 {
   font-size: $font-size-h4;
   line-height: 30px;
-  font-family: "Roboto";
+  font-family: "Segoe UI";
 }
 h5,
 .h5 {
   font-size: $font-size-h5;
   margin-bottom: 15px;
-  font-family: "Roboto";
+  font-family: "Segoe UI";
 }
 h6,
 .h6 {
   font-size: $font-size-h6;
   font-weight: $font-weight-bold;
   text-transform: uppercase;
-  font-family: "Roboto";
+  font-family: "Segoe UI";
 }
 
 .description > p > * {
@@ -121,12 +121,12 @@ h6,
 p {
   font-size: $font-paragraph;
   line-height: $line-height-general;
-  font-family: "Roboto";
+  font-family: "Segoe UI";
 }
 p > * {
   color: white !important;
   background-color: transparent !important;
-  font-family: "Roboto";
+  font-family: "Segoe UI";
   word-break: break-word;
 }
 .multiselect__option.multiselect__option--highlight {
@@ -158,7 +158,7 @@ p > * {
 }
 span {
   background-color: transparent !important;
-  font-family: "Roboto";
+  font-family: "Segoe UI";
 }
 
 .description-container {
