--- a/src/assets/sass/website/fonts.scss
+++ b/src/assets/sass/website/fonts.scss
@@ -1,16 +1,16 @@
 @font-face {
-  font-family: "Segoe-UI";
+  font-family: "Segoe UI";
   src: url("../../fonts/website/Segoe\ UI.ttf");
 }
 @font-face {
-  font-family: "Segoe-UI Bold";
+  font-family: "Segoe UI Bold";
   src: url("../../fonts/website/Segoe\ UI\ Bold.ttf");
 }
 @font-face {
-  font-family: "Segoe-UI Bold Italic";
+  font-family: "Segoe UI Bold Italic";
   src: url("../../fonts/website/Segoe\ UI\ Bold\ Italic.ttf");
 }
 @font-face {
-  font-family: "Segoe-UI Italic";
+  font-family: "Segoe UI Italic";
   src: url("../../fonts/website/Segoe\ UI\ Italic.ttf");
 }
