--- a/src/assets/sass/website/components/about/about-clients.scss
+++ b/src/assets/sass/website/components/about/about-clients.scss
@@ -12,8 +12,7 @@
       color: $header-item;
       margin: 100px 0 150px 0;
       h1{
-        font-family: "Segoe UI";
-        font-weight: bolder;
+        font-family: "Segoe UI Bold";
       }
     }
       &__topline, &__bottomline{
