--- a/src/assets/sass/website/components/about/about-section.scss
+++ b/src/assets/sass/website/components/about/about-section.scss
@@ -23,8 +23,7 @@
             h1{
                 color: $header-item;
                 font-size: 2.3rem;
-                font-family: "Segoe UI";
-                font-weight: bolder;
+                font-family: "Segoe UI Bold";
                 @include is-large-desktop {
                     font-size: 1.7rem;
                   }
@@ -35,7 +34,6 @@
             p{
                 color: $sub-text;
                 font-size: 1.2rem;
-                font-family: "Segoe UI";
                 @include is-large-desktop {
                   font-size: 1rem;
                 }
