--- a/src/assets/sass/website/shared/footer.scss
+++ b/src/assets/sass/website/shared/footer.scss
@@ -2,216 +2,221 @@
 @import "../variables.scss";
 @import "../color-palette.scss";
 
+$scale-hover: scale(1.2);
 
-$scale-hover:scale(1.2);
+$fontsize-paragraph: 1.2rem;
+$clippath-botRight-leftTop: polygon(
+  14% 0,
+  100% 0,
+  100% 85%,
+  86% 100%,
+  0 100%,
+  0 15%
+);
+$transition-5: all 0.5s ease-in-out;
+$transition-3: all 0.3s ease-in-out;
 
-$fontsize-paragraph:1.2rem;
-$clippath-botRight-leftTop:polygon(14% 0, 100% 0, 100% 85%, 86% 100%, 0 100%, 0 15%);
-$transition-5:all .5s ease-in-out;
-$transition-3:all .3s ease-in-out;
+.footer-section {
+  background-color: $dark-background;
+  padding-top: 175px;
+  &__container {
+    width: 80%;
+    margin: auto;
 
-.footer-section{
-    background-color: $dark-background;
-    padding-top: 175px;
-    &__container{
-        width: 80%;
-        margin: auto;
-
-        .footer-leftside{
-            padding-bottom: 20px;
-                p{
-                    color: $light-gray;
-                    font-size: $fontsize-paragraph;
-                    @include is-desktop {
-                        font-size: 1rem;
-                    }
-                    @include is-mobile{
-                        font-size: .8rem;
-                    }
-                    @include is-extra-small-mobile{
-                        font-size: .8rem;
-                    }
-                }
-                img{
-                    padding-right: 5px;
-                    margin-top: -3px;
-                }
-                @include is-extra-small-mobile{
-                    text-align: center;
-                }
-                @include is-mobile {
-                    text-align: center;
-                }
-                @include is-tablet {
-                    text-align: center;
-                }
-        }
-
-        .footer-socialmedia{
-            padding-bottom: 100px;
-            .footer-followus{
-                width: 108px;
-                position: relative;
-                color: $header-item;
-                padding-bottom: 25px;
-                font-family: "Segoe-UI Bold";
-                font-size: 20px;
-                  &::after{
-                    content: "";
-                    position: absolute;
-                    bottom: 0;
-                    top: 28px;
-                    left: 0px;
-                    height: 4px;
-                    width: 56%;
-                    background: $underline-cyan;
-                    transition: $transition-5;
-                  }
-                @include is-extra-small-mobile{
-                  margin: auto;
-                }
-                @include is-mobile {
-                  margin: auto;
-                }
-                @include is-tablet {
-                  margin: auto;
-                }
-                @include is-desktop {
-                  margin: auto;
-                }
-            }
-            
-            .socialMedia{
-                @include is-extra-small-mobile{
-                  justify-content: center;
-                }
-                @include is-mobile {
-                  justify-content: center;
-                }
-                @include is-tablet {
-                  justify-content: center;
-                }
-                @include is-desktop {
-                  justify-content: center;
-                }
-            }
-            .social-logos-container{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                cursor: pointer;
-                color: $header-item;
-                width: 110px;
-                height: 85px;
-                margin: 10px;
-                background-color: $accent;
-                clip-path: $clippath-botRight-leftTop;
-                transition: $transition-5;
-                &:hover{
-                  background-color:  darken($accent, 30px);
-                }
-                @include is-extra-small-mobile{
-                    width: 85px;
-                    height: 65px;
-                    .fb-logo{
-                        width: 20px;
-                    }
-                    img{
-                        width: 30px;
-                    }
-                }
-                @include is-mobile {
-                    width: 96px;
-                    height: 74px;
-                }
-                @include is-tablet {
-                    width: 96px;
-                    height: 74px;
-                }
-                @include is-desktop {
-                    width: 96px;
-                    height: 74px;
-                }
-            }
-        }
-
-.footer-nav{
-    .nav-link{
-        padding: 0;
-
-    }
-    .active{
-        transform: $scale-hover;
-        a::after{
-            width: 50%;
-        }
-        .nav-link{
-            font-family: 'Segoe-UI Bold';
-        }
-    }
-     li {
-        margin: 40px;
-        position: relative;
-        @include is-extra-small-mobile{
-            margin: 15px;
+    .footer-leftside {
+      padding-bottom: 20px;
+      p {
+        color: $light-gray;
+        font-size: $fontsize-paragraph;
+        @include is-desktop {
+          font-size: 1rem;
         }
         @include is-mobile {
-            margin: 20px;
+          font-size: 0.8rem;
+        }
+        @include is-extra-small-mobile {
+          font-size: 0.8rem;
+        }
+      }
+      img {
+        padding-right: 5px;
+        margin-top: -3px;
+      }
+      @include is-extra-small-mobile {
+        text-align: center;
+      }
+      @include is-mobile {
+        text-align: center;
+      }
+      @include is-tablet {
+        text-align: center;
+      }
+    }
+
+    .footer-socialmedia {
+      padding-bottom: 100px;
+      .footer-followus {
+        width: 108px;
+        position: relative;
+        color: $header-item;
+        padding-bottom: 25px;
+        font-family: "Segoe UI Bold";
+        font-size: 20px;
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          top: 28px;
+          left: 0px;
+          height: 4px;
+          width: 56%;
+          background: $underline-cyan;
+          transition: $transition-5;
+        }
+        @include is-extra-small-mobile {
+          margin: auto;
+        }
+        @include is-mobile {
+          margin: auto;
         }
         @include is-tablet {
-            margin: 20px;
+          margin: auto;
         }
-     }
-        a{
+        @include is-desktop {
+          margin: auto;
+        }
+      }
+
+      .socialMedia {
+        @include is-extra-small-mobile {
+          justify-content: center;
+        }
+        @include is-mobile {
+          justify-content: center;
+        }
+        @include is-tablet {
+          justify-content: center;
+        }
+        @include is-desktop {
+          justify-content: center;
+        }
+      }
+      .social-logos-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        color: $header-item;
+        width: 110px;
+        height: 85px;
+        margin: 10px;
+        background-color: $accent;
+        clip-path: $clippath-botRight-leftTop;
+        transition: $transition-5;
+        &:hover {
+          background-color: darken($accent, 30px);
+        }
+        @include is-extra-small-mobile {
+          width: 85px;
+          height: 65px;
+          .fb-logo {
+            width: 20px;
+          }
+          img {
+            width: 30px;
+          }
+        }
+        @include is-mobile {
+          width: 96px;
+          height: 74px;
+        }
+        @include is-tablet {
+          width: 96px;
+          height: 74px;
+        }
+        @include is-desktop {
+          width: 96px;
+          height: 74px;
+        }
+      }
+    }
+
+    .footer-nav {
+      .nav-link {
+        padding: 0;
+      }
+      .active {
+        transform: $scale-hover;
+        a::after {
+          width: 50%;
+        }
+        .nav-link {
+          font-family: "Segoe UI Bold";
+        }
+      }
+      li {
+        margin: 40px;
+        position: relative;
+        @include is-extra-small-mobile {
+          margin: 15px;
+        }
+        @include is-mobile {
+          margin: 20px;
+        }
+        @include is-tablet {
+          margin: 20px;
+        }
+      }
+      a {
         color: $header-item;
         font-size: $fontsize-paragraph;
-            &:hover{
-                color: $header-item;
-            }
-            &:hover::after{
-                width: 50%;
-            }
-            &::after{
-                content: "";
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                height: 4px;
-                width: 0%;
-                top: 30px;
-                background: $accent;
-                transition: $transition-3;
-            }
+        &:hover {
+          color: $header-item;
         }
+        &:hover::after {
+          width: 50%;
+        }
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          height: 4px;
+          width: 0%;
+          top: 30px;
+          background: $accent;
+          transition: $transition-3;
+        }
+      }
     }
   }
 
- .CopyrightDiv{
+  .CopyrightDiv {
     color: $light-gray;
     background-color: $primary;
-      a{
-        text-decoration: none;
-        color: $accent;
-        transition: $transition-3;
-          &:hover{
-            color: $header-item;
-          }
+    a {
+      text-decoration: none;
+      color: $accent;
+      transition: $transition-3;
+      &:hover {
+        color: $header-item;
       }
-      h5{
-        line-height: 60px;
-        margin-bottom: 0;
-        width: 80%;
-        margin: auto;
-        @include is-extra-small-mobile{
-            font-size: .7rem;
-        }
-        @include is-mobile{
-            font-size: .9rem;
-        }
+    }
+    h5 {
+      line-height: 60px;
+      margin-bottom: 0;
+      width: 80%;
+      margin: auto;
+      @include is-extra-small-mobile {
+        font-size: 0.7rem;
       }
- }
+      @include is-mobile {
+        font-size: 0.9rem;
+      }
+    }
+  }
 
- .scroll-top-wrapper{
+  .scroll-top-wrapper {
     position: absolute;
     display: flex;
     justify-content: center;
@@ -224,16 +229,16 @@ $transition-3:all .3s ease-in-out;
     cursor: pointer;
     transition: $transition-3;
     clip-path: $clippath-botRight-leftTop;
-    &:hover{
-        background-color: darken($accent, 30px);
+    &:hover {
+      background-color: darken($accent, 30px);
     }
-    div{
-        :last-child{
-            margin-top: -7px;
-        }
-        img{
-            display: flex;
-        }
+    div {
+      :last-child {
+        margin-top: -7px;
+      }
+      img {
+        display: flex;
+      }
     }
- }
+  }
 }
