--- a/src/assets/sass/website/containers/contact.scss
+++ b/src/assets/sass/website/containers/contact.scss
@@ -5,10 +5,12 @@
 .contact-wrapper {
   @include initializePageStyle;
 
-  &__contact_box {
+  &__contact-box {
     padding-bottom: 100px;
+    height: 100%;
     @include is-extra-small-mobile {
       padding-bottom: 0px;
+      height: max-content;
     }
   }
 }
