--- a/src/assets/sass/website/components/jobs/jobs-main-content.scss
+++ b/src/assets/sass/website/components/jobs/jobs-main-content.scss
@@ -15,13 +15,14 @@
     &__title{
         width: 70%;
         h1{
-            text-transform: capitalize;
+            text-transform: uppercase;
             font-family: "Segoe UI Bold";
             color: $header-item;
         }
         p{
             color: $sub-text;
             width: 57%;
+            font-size: 1.2rem;
             @include is-large-desktop {
                 width: 70%;
             }
