--- a/src/assets/sass/website/color-palette.scss
+++ b/src/assets/sass/website/color-palette.scss
@@ -6,4 +6,5 @@ $header-item: white;
 $light-white: rgba(#fff, 0.2);
 $underline-cyan: #59c0b2;
 $light-gray: #9f9f9f;
+$gray: #b8b8b8;
 $sub-text: #e6e6e6;
