--- a/src/assets/sass/website/components/home/work-carousel.scss
+++ b/src/assets/sass/website/components/home/work-carousel.scss
@@ -186,36 +186,36 @@
   }
 }
   // All have vw as divide operation units must be the same for all
-$width: 47vw;
-$height: 16vw;
-$clipped-length: 1vw;
+$width: 750px;
+$height: 750px;
+$clipped-length: 50px;
 
 $widths-and-heights: (
   clipped-shape-width: $width,
   clipped-shape-height: $height,
   clipped-length: $clipped-length,
   clipped-shape-width-xs: (
-    $width + 50vw
+    $width + 50px
   ),
   clipped-shape-height-xs: (
-    $height + 30vw
+    $height + 30px
   ),
   clipped-length-xs: $clipped-length,
   clipped-shape-width-sm: (
-    $width + 50vw
+    $width + 50px
   ),
   clipped-shape-height-sm: (
-    $height + 30vw
+    $height + 30px
   ),
   clipped-length-sm: $clipped-length,
-  clipped-shape-width-md: $width + 30vw,
+  clipped-shape-width-md: $width + 30px,
   clipped-shape-height-md: $height * 2,
   clipped-length-md: $clipped-length,
-  clipped-shape-width-lg: $width + 10vw,
-  clipped-shape-height-lg: $height + 15vw,
+  clipped-shape-width-lg: $width + 10px,
+  clipped-shape-height-lg: $height + 15px,
   clipped-length-lg: $clipped-length,
-  clipped-shape-width-xlg: $width + 5vw,
-  clipped-shape-height-xlg: $height + 30vw,
+  clipped-shape-width-xlg: $width + 5px,
+  clipped-shape-height-xlg: $height + 30px,
   clipped-length-xlg: $clipped-length,
   clipped-shape-width-xxlg: $width,
   clipped-shape-height-xxlg: $height,
